Drop-down menu is now aligned so that it won't get cut off by the screen, and the text on the items within it is left aligned because - as Skittles says - "right align on text is never correct"

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -239,3 +239,8 @@ input.object_hidden_checkbox
   -moz-filter: brightness(70%);
   filter: brightness(70%);
 }
+
+.dropdown-menu
+{
+  left: -54px; !important
+}
